# dodo

./: .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  mvp.md
.github/workflows/: jekyll-gh-pages.yml  mdbook.yml
crates/dodo-ai/: Cargo.toml
crates/dodo-ai/data/labeled/: ci_cd.csv
crates/dodo-ai/src/: confignet_engine.rs  engine.rs  lib.rs  phi3.rs
crates/dodo-classifier/: Cargo.toml
crates/dodo-cli/: Cargo.toml
crates/dodo-cli/src/: cli.rs  main.rs
crates/dodo-cli/src/commands/: add.rs  build.rs  init.rs  mod.rs
crates/dodo-core/: Cargo.toml
crates/dodo-core/src/: init.rs
crates/dodo-core/src/scanner/: controller.rs  ignore.rs  mod.rs
crates/dodo-filetype/: Cargo.toml
crates/dodo-filetype/src/: engine.rs  lib.rs
docs/: .gitignore  LICENSE.markdown  LICENSES.markdown  README.md  _config.yml  about.markdown  architecture.md  book.toml  commands.markdown  config.markdown  faq.markdown  index.markdown  install.md  internals.markdown  introduction.markdown  overview.md  quickstart.markdown  raphus.markdown  troubleshooting.markdown
docs/_posts/: 2025-03-26-welcome-to-jekyll.markdown
docs/_site/: feed.xml
docs/_site/src/: SUMMARY.html  chapter_1.html  continuous-integration.html  index.html
docs/configuration/: commands.markdown  config.markdown  index.markdown
docs/ecosystem/: index.markdown  raphus.markdown
docs/getting-started/: about.markdown  index.markdown  install.md  introduction.markdown  overview.md  quickstart.markdown
docs/internals/: how-dodo-works.markdown  index.markdown  internals.markdown
docs/src/: LICENSES.markdown  README.md  SUMMARY.md  faq.markdown  troubleshooting.markdown
docs/src/configuration/: commands.markdown  config.markdown
docs/src/ecosystem/: raphus.markdown
docs/src/getting-started/: about.markdown  overview.md
docs/src/internals/: how-dodo-works.markdown  pipeline.markdown
dodo-cache/: Cargo.toml
dodo-cli/: Cargo.toml
dodo-cli/src/commands/: mod.rs
dodo-parsers/: Cargo.toml
examples/: README.md
(+4 files in other folders)
