[package]
name = "dodo"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/dodo-ai",
    "crates/dodo-classifier",
    "crates/dodo-filetype",
    "crates/dodo-parsers",
    "crates/dodo-cache",
    "crates/dodo-cli"
]

[dependencies]
serde = "1.0.219"
toml = "0.8.20"
dodo-ai = { path = "crates/dodo-ai" }
dodo-classifier = { path = "crates/dodo-classifier" }
dodo-filetype = { path = "crates/dodo-filetype" }
dodo-parsers = { path = "crates/dodo-parsers" }
dodo-cache = { path = "crates/dodo-cache" }
dodo-cli = { path = "crates/dodo-cli" }
