[workspace]
resolver = "3"
members = [
    "crates/dodo-ai",
    "crates/dodo-classifier",
    "crates/dodo-filetype",
    "crates/dodo-parsers",
    "crates/dodo-cache",
    "crates/dodo-core",
    "crates/dodo-cli"
]

[workspace.package]
name = "dodo"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Core crates
dodo-ai = { path = "crates/dodo-ai" }
dodo-classifier = { path = "crates/dodo-classifier" }
dodo-filetype = { path = "crates/dodo-filetype" }
dodo-parsers = { path = "crates/dodo-parsers" }
dodo-cache = { path = "crates/dodo-cache" }
dodo-core = { path = "crates/dodo-core" }
dodo-cli = { path = "crates/dodo-cli" }

# External dependencies
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
ignore = "0.4.23"
magika = "0.1.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
